--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.9.0",
+    "worker-loader": "^2.0.0"
   },
   "scripts": {
     "build": "webpack -c webpack.config.js -p",
